--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 			<li>item 4</li>
 			<li>item 5</li>
 	</module-one>
+	
+	<module-two>
+		<div>my Content</div>
+	</module-two>
+	
+	<module-three>
+		<div>my awesome new module about news</div>
+	</module-three>
 
 </body>
 </html>
